scripts/nullness/annotator/url4c27590fbe_Hoten_Java_Delaunay_tgz-pJ8-com_hoten_delaunay_examples_TestDriverJ8.txt
../annotator/url4c27590fbe_Hoten_Java_Delaunay_tgz-pJ8-com_hoten_delaunay_examples_TestDriverJ8/src/com/hoten/delaunay/voronoi/Edge.java:4: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url4c27590fbe_Hoten_Java_Delaunay_tgz-pJ8-com_hoten_delaunay_examples_TestDriverJ8/src/com/hoten/delaunay/voronoi/Edge.java:20: error: cannot find symbol
    @Initializer public void setVornoi(Corner v0, Corner v1) {
     ^
  symbol:   class Initializer
  location: class Edge
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
